# zkconnect4

./: .gitignore  README.md  notes.md  package.json  pnpm-lock.yaml
apps/web/: next.config.js  package.json
apps/web/app/: page.tsx
apps/web/hooks/: useAgent.ts  useWorker.ts
apps/web/workers/: shared.ts  worker.ts
zkconnect4-nova/: Cargo.toml  README.md  copy.sh
zkconnect4-nova-lib/: Cargo.toml
zkconnect4-nova-lib/src/: lib.rs
zkconnect4-nova-wasm/: Cargo.toml
zkconnect4-nova-wasm/src/: wasm.rs
zkconnect4-nova-wasm/tests/: lib.rs
zkconnect4-nova/data/: connect4.wasm
zkconnect4-nova/data/game/: aggregate.json
zkconnect4-nova/src/: lib.rs  main.rs
